<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_UAMethodCall_DBRecordInsertRes" Id="{853cebcf-3e7e-4b1b-a068-8f5c1a70ee47}">
    <Declaration><![CDATA[TYPE ST_UAMethodCall_DBRecordInsertRes :
STRUCT
	nNumberOfOutputArguments	: UDINT;
	nReserved					: ARRAY [1..4] OF BYTE; // padding
	stOutputArgInfo				: ARRAY [1..1] OF ST_UAMethodArgInfo;
	stSQLStateInternal			: ST_UASQLState; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>